--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,7 +15,8 @@ spring.jpa.show-sql=true
 spring.main.allow-bean-definition-overriding=true
 
 #JWT Config
-
+jwt.secret=eyJhbGciOiJIUzI1NiJ9.eyJSb2xlIjoiQWRtaW4iLCJJc3N9dPip32yQynt59595E
+jwt.expiration=86400000
 
 #Email Config (Mailtrap.io)
 spring.mail.host=sandbox.smmtp.mailtrap.io
