--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,7 @@
 #Server Config
 spring.application.name=springstore
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=2MB
 
 server.port=8081
 
