--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -28,3 +28,7 @@ spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+#Enable swagger ui
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
