--- a/pom.xml
+++ b/pom.xml
@@ -144,10 +144,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<!--suppress UnresolvedMavenProperty -->
-					<argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
-				</configuration>
+				<version>3.5.3</version>
 			</plugin>
 
 		</plugins>
