--- a/pom.xml
+++ b/pom.xml
@@ -144,9 +144,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.5.3</version>
+				<configuration>
+					<argLine></argLine>
+				</configuration>
 			</plugin>
-
 		</plugins>
 	</build>
 
