feat: added Dockerfile for building app's image, update db connection properties to match containertized DB's IP address

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ spring.servlet.multipart.max-file-size=2MB
 server.port=8081
 
 #Database Config
-spring.datasource.url=jdbc:postgresql://localhost:5432/springstore_db
+spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/springstore_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
