--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,9 +6,12 @@ spring.servlet.multipart.max-file-size=2MB
 server.port=8081
 
 #Database Config
-spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/springstore_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.url=jdbc:postgresql://postgres:5432/springstore_db
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -21,12 +24,12 @@ jwt.secret=eyJhbGciOiJIUzI1NiJ9.eyJSb2xlIjoiQWRtaW4iLCJJc3N9dPip32yQynt59595E
 jwt.expiration=86400000
 
 #Email Config (Mailtrap.io)
-spring.mail.host=sandbox.smmtp.mailtrap.io
-spring.mail.port=2525
-spring.mail.username=
-spring.mail.password=
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.host=sandbox.smmtp.mailtrap.io
+#spring.mail.port=2525
+#spring.mail.username=
+#spring.mail.password=
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Enable swagger ui
 springdoc.api-docs.enabled=true
