fix: modified maven-compiler-plugin and docker build

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,7 +11,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres
+        image: postgres:15
         ports:
           - 5432:5432
         env:
@@ -31,36 +31,45 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          distribution: temurin
-          java-version: 21
+          distribution: 'temurin'
+          java-version: '21'
           cache: maven
 
-      - name: Show Java version
-        run: java --version
+      - name: Verify Java version
+        run: |
+          java --version
+          echo "JAVA_HOME: $JAVA_HOME"
+          which java
 
-      - name: Show Maven version
+      - name: Verify Maven version
         run: mvn -v
 
       - name: Make mvnw executable
         run: chmod +x ./mvnw
 
       - name: Build with Maven
-        run: sudo ./mvnw -B clean package -D skiptest
+        run: ./mvnw clean package -DskipTests
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME }}
 
       - name: Build Docker image
         run: docker build -t springstore:latest .
 
-      - name: Run Docker image (test it)
+      - name: Test Docker image
         run: |
-          docker run --rm \
-            -e SPRING_DATASOURCE_URL=jdbc:postgresql://host.docker.internal:5432/springstore_db \
+          docker run --rm -d \
+            --name springstore-test \
+            --network host \
+            -e SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/springstore_db \
             -e SPRING_DATASOURCE_USERNAME=postgres \
             -e SPRING_DATASOURCE_PASSWORD=postgres \
             springstore:latest
-
-      # Optional: Push to DockerHub / GHCR
-      # - name: Login to Docker Hub
-      #   run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
-      # - name: Push image
-      #   run: docker tag springstore yourname/springstore:latest && docker push yourname/springstore:latest
+          
+#           Wait a bit for the app to start
+          sleep 30
+          
+          # Check if container is still running
+          docker ps | grep springstore-test || echo "Container stopped"
+          
+          # Stop the test container
+          docker stop springstore-test || true
